--- a/app.wxss
+++ b/app.wxss
@@ -15,6 +15,10 @@ page {
   box-sizing: border-box;
 }
 
+view {
+  box-sizing: border-box;
+}
+
 image {
   width: 100%;
   height: 100%;
@@ -45,7 +49,8 @@ page .i-icon {
   padding-right: 30rpx;
   height: 80rpx;
   display: flex;
-  align-content: space-between;
+  justify-content: space-between;
+  align-items: center;
   box-sizing: border-box;
   position: relative;
   background: #ffffff;
@@ -79,7 +84,7 @@ page .i-icon {
   line-height: 44rpx;
 }
 
-.input_cell view:last-child {
+.input_cell .input_cell_row:last-child, .input_cell .input_cell_rich_row:last-child {
   border-bottom: none;
 }
 
@@ -226,11 +231,28 @@ button::after {
   color: #ffffff;
 }
 
-@keyframes loading-spin {
-    0% {
-        transform: rotate(0);
-    }
-    100% {
-        transform: rotate(360deg);
-    }
+.picker {
+  font-size: 28rpx;
+  color: #333333;
+}
+
+.placeholder {
+  font-size: 28rpx;
+  color: #999999;
+}
+
+.list_null{
+  padding-top: 240rpx;
+}
+
+.list_null .list_null_image {
+  width: 234rpx;
+  height: 180rpx;
+  margin: 0 auto 50rpx;
+}
+
+.list_null .list_null_text {
+  font-size: 36rpx;
+  color: #999999;
+  text-align: center;
 }
