--- a/pages/order-food/orderDetail/index.wxml
+++ b/pages/order-food/orderDetail/index.wxml
@@ -2,6 +2,17 @@
 <view class="submit_order">
   <view class="page_content">
     <view class="block food_list">
+      <view class="card_title">
+        <view class="title_main">
+          <view class="order_icon">
+            <image src="/images/order/ico_food.png"></image>
+          </view>
+          点餐服务
+        </view>
+        <view class="title_status">
+          {{orderStatus[orderDetail.status]}}
+        </view>
+      </view>
       <view class="food_info" wx:for="{{orderDetail.dish}}" wx:key="index">
         <view class="food_pic">
           <image src="{{item.dishpicurl}}" mode="aspectFill"></image>
@@ -60,7 +71,7 @@
         <view class="input_cell_row">
           <view class="label">备注</view>
           <view class="form_item">
-            {{orderDetail.remark && orderDetail.remark ? orderDetail.remark : ''}}
+            {{orderDetail.remark && orderDetail.remark ? orderDetail.remark : '无'}}
           </view>
         </view>
       </view>
