--- a/pages/order-food/index/index.wxml
+++ b/pages/order-food/index/index.wxml
@@ -1,34 +1,35 @@
 <!--pages/order-food/index/index.wxml-->
-<view class="page_tips">
+<!-- <view class="page_tips">
   商务座旅客在用餐时间内乘车，已包含45元标准餐食一份哦。
-</view>
+</view> -->
 <view class="page_content">
   <view class="page_title">
-  票面信息
-</view>
-
-<view class="form_box">
-  <view class="form_content">
-    <view class="form_item">
-      <view class="label">乘车日期</view>
-      <view class="input_box">
-        {{nowDate}}（今天）
-      </view>
-    </view>
-    <view class="form_item">
-      <view class="label">车次</view>
-      <view class="input_box">
-        <input type="text" model:value="{{tranNo}}" placeholder="请填写车次号" confirm-type="search" bindconfirm="AjaxQueryTrainList"/>
-      </view>
-    </view>
+    车次信息
   </view>
-  <!-- <view class="form_button">
+
+  <view class="form_box">
+    <view class="form_content">
+      <view class="form_item">
+        <view class="label">乘车日期</view>
+        <view class="input_box">
+          {{nowDate}}（今天）
+        </view>
+      </view>
+      <view class="form_item">
+        <view class="label">车次</view>
+        <view class="input_box">
+          <input type="text" model:value="{{tranNo}}" placeholder="请填写车次号" confirm-type="search"
+            bindconfirm="AjaxQueryTrainList" />
+        </view>
+      </view>
+    </view>
+    <!-- <view class="form_button">
     <view class="form_button_inside">
       <text>导入车</text>
       <text>票信息</text>
     </view>
   </view> -->
-</view>
+  </view>
 </view>
 
 <navigator url="/pages/order-food/orderList/index" class="order_btn">我的订单</navigator>
