--- a/pages/user/index.wxss
+++ b/pages/user/index.wxss
@@ -1,5 +1,5 @@
 /* pages/user/index.wxss */
-.user_info{
+.user_info {
   padding: 40rpx 30rpx;
   display: flex;
   justify-content: space-between;
@@ -7,10 +7,12 @@
   background: #ffffff;
   margin: 0 auto 20rpx;
 }
+
 .user_info .user_photo {
   width: 110rpx;
   height: 110rpx;
 }
+
 .user_info .user_content {
   padding: 20rpx 30rpx;
   width: 300rpx;
@@ -26,4 +28,95 @@
 .user_info .user_content .vip {
   width: 80rpx;
   height: 30rpx;
+}
+
+.user_content .login_btn {
+  width: 220rpx;
+  height: 60rpx;
+  border-radius: 8rpx;
+  border: solid 2rpx #638EF6;
+  line-height: 56rpx;
+  color: #638EF6;
+  font-size: 30rpx;
+  text-align: center;
+  margin: auto;
+}
+
+.cover {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.8);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.cover .cover_box {
+  width: 180rpx;
+}
+
+.cover .cover_box .icon {
+  width: 180rpx;
+  height: 180rpx;
+  margin-bottom: 30rpx;
+}
+
+.cover .cover_box .name {
+  font-size: 32rpx;
+  color: #ffffff;
+  text-align: center;
+}
+
+.cover .login_box {
+  width: 616rpx;
+  height: 750rpx;
+  position: relative;
+}
+
+.login_box .login_content {
+  position: absolute;
+  left: 30rpx;
+  bottom: 68rpx;
+  right: 30rpx;
+  top: 380rpx;
+}
+
+.login_content .login_title {
+  font-size: 40rpx;
+  color: #333333;
+  text-align: center;
+  margin-bottom: 30rpx;
+}
+
+.login_content .login_text {
+  font-size: 30rpx;
+  color: #666666;
+  text-align: center;
+  margin-bottom: 110rpx;
+}
+
+.login_content .control_row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.btn {
+  width: 260rpx;
+  height: 80rpx;
+  border-radius: 14rpx;
+  text-align: center;
+  line-height: 76rpx;
+  font-size: 30rpx;
+  background: #ffffff;
+  border: solid 2rpx #638EF6;
+  color: #638EF6;
+}
+
+.btn.full_btn{
+  background: #638EF6;
+  color: #ffffff;
 }
